cleaned up comments

--- a/employee-project/unsolved.html
+++ b/employee-project/unsolved.html
@@ -29,8 +29,8 @@
                         <th>Employee Name</th>
                         <th>Role</th> 
                         <th>Start Date</th>
-                        <th>Months Worked</th> 
                         <th>Monthly Rate</th>
+                        <th>Months Worked</th> 
                         <th>Total Billed</th>
                     </tr class="click-value">
                     <tr>
@@ -54,5 +54,5 @@
         </div>
     </div>
         </body>
-        <script type="text/javascript" src="assets/javascript/practice.js"></script>
+        <script type="text/javascript" src="unsolved.js"></script>
         </html>
