finished basic logic and structure

--- a/employee-project/unsolved.html
+++ b/employee-project/unsolved.html
@@ -25,6 +25,7 @@
           
             <!-- Table -->
                 <table class="table">
+                    <thead>
                     <tr>
                         <th>Employee Name</th>
                         <th>Role</th> 
@@ -32,9 +33,10 @@
                         <th>Monthly Rate</th>
                         <th>Months Worked</th> 
                         <th>Total Billed</th>
-                    </tr class="click-value">
-                    <tr>
                     </tr>
+                </thead>
+                    <tbody id="table-body">
+                    </tbody>
                 </table>
         </div>
         
